--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Ignore temporary files and directories
+/tmp/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
